# VisoLingua

./: .aider.chat.history.md  .aider.input.history  .gitignore  BUILD_FIXES.md  Create-Shortcut.ps1  DEPLOYMENT_GUIDE.md  IMPLEMENTATION_COMPARISON.md  README.md  RELEASE_GUIDE.md  SETUP.md  SHORTCUT_CREATION.md  VisoLingua.spec  WINDOWS_INSTALLATION.md  build.bat  build_exe.py  build_installer.bat  create_icon.py  create_portable.bat  create_shortcut.bat  create_shortcut_fixed.bat  demo.py  install_windows.bat  installer.nsi  main.py  prompt.md  requirements.txt  run_app.bat  test_app.py  test_dpi.py  test_fixes.py  test_quit.py
.aider.tags.cache.v4/: cache.db-shm  cache.db-wal
.github/: WORKFLOWS_README.md
.github/scripts/: create-launcher.ps1  create-readme.ps1  create-shortcut.ps1
.github/workflows/: build-go-windows.yml  build-release.yml  build-rust-windows.yml  release.yml
config/: config.ini  config_sample.ini  settings.py
core/: screenshot.py  translator.py
ui/: base_window.py  overlay.py  result_window.py
utils/: constants.py  helpers.py
visolingua-go/: BUILD.md  README.md  app.go  config.go  error_windows.go  go.mod  main.go  test_basic.go  translator.go  wails.json
visolingua-go/config/: config_sample.toml
visolingua-rust/: .gitignore  BUILD_RESULTS.md  BUILD_WINDOWS.md  COMPATIBILITY.md  README.md  SETUP.md  build-windows.ps1  package.json
visolingua-rust/src-tauri/: Cargo.toml  tauri.conf.json
visolingua-rust/src-tauri/capabilities/: default.json
visolingua-rust/src-tauri/src/: config.rs  main.rs  screenshot.rs  translator.rs
(+3 files in other folders)
