[package]
name = "visolingua"
version = "1.0.0"
description = "Native translation overlay tool"
authors = ["VisoLingua Contributors"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["custom-protocol"] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
image = "0.25"
base64 = "0.22"
toml = "0.8"
dirs = "5.0"
anyhow = "1.0"
xcap = "0.0.12"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
